# jobsources

./: .pylintrc  GEMINI.md  README.md  debug_detail_page.html  example.env  main.py  prompt.md  pyproject.toml
docs/: requirements.md
scripts/: run_pylint.sh
src/analysis/: manager.py
src/jobsources/analysis/: manager.py
tests/: test_manager.py
tests/unit/: test_manager_methods.py
