[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsources"
version = "0.1.0"
description = "A Python library for analyzing job listing and detail pages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "feedparser>=6.0.10",
]

[tool.setuptools.packages.find]
where = ["src"] # Search for packages in "src"